# adk-crash-course

./: .gitignore  README.md  pyproject.toml
01-basic-agent/greeting_agent/: agent.py
02-tool-agent/tool_agent/: agent.py
03-litellm-agent/dad_joke_agent/: .env.example  agent.py
04-structured-outputs/email_agent/: agent.py
