[project]
name = "adk-crash-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.16.0",
    "google-generativeai>=0.8.5",
    "litellm>=1.78.0",
    "psutil>=7.1.0",
    "python-dotenv>=1.1.1",
    "yfinance>=0.2.66",
]
